<resources>
    <string name="app_name">Clique</string>
    <string name="login_username_placeholder">Benutzername&#8230;</string>
    <string name="login_password_placeholder">Passwort&#8230;</string>
    <string name="login_loginbutton_placeholder">Anmelden</string>
    <string name="login_registerbutton_placeholder">Registrieren</string>
    <string name="register_name_placeholder">Vorname&#8230;</string>
    <string name="register_surname_placeholder">Nachname&#8230;</string>
    <string name="register_email_placeholder">E-Mail&#8230;</string>
    <string name="register_password_placeholder">Passwort&#8230;</string>
    <string name="register_repeatpassword_placeholder">Passwort wiederholen&#8230;</string>
    <string name="register_backbutton">Zurück</string>
    <string name="register_executeregistration">Registrieren</string>
    <string name="title_activity_show_cliques">Deine Cliquen</string>
    <string name="title_activity_show_events">Deine Events</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_clique_caption_one">Wie soll deine Clique heißen?</string>
    <string name="new_clique_caption_two">Gebe eine kurze Beschreibung an!</string>
    <string name="new_clique_button">Erstellen</string>
    <string name="event_detail_streetLbl">Straße:</string>
    <string name="event_detail_streetNbrLbl">Hausnummer:</string>
    <string name="event_detail_cityLbl">Ort:</string>
    <string name="event_detail_descLbl">Beschreibung:</string>
    <string name="event_detail_button_acceptLbl">Zusagen</string>
    <string name="event_detail_button_cancelLbl">Absagen</string>
    <string name="event_detail_button_showLocationLbl">Karte</string>
    <string name="event_new_streetLbl">Straße:</string>
    <string name="event_new_streetNbrLbl">Hausnummer:</string>
    <string name="event_new_cityLbl">Ort:</string>
    <string name="event_new_descLbl">Beschreibung:</string>
    <string name="new_event_name_hint">Name</string>
    <string name="new_event_street_hint">Straße</string>
    <string name="new_event_streetNr_hint">Nr.</string>
    <string name="new_event_zip_hint">PLZ</string>
    <string name="new_event_city_hint">Stadt</string>
    <string name="new_event_desc_hint">Beschreibung</string>
    <string name="new_event_date_hint">Datum</string>
    <string name="new_event_button_lbl">Erstellen</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
