<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hsos.mad.clique.activities.CreateNewEventActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/new_event_street"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/new_event_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_event_street_hint"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/new_event_street_nr"
        android:layout_alignTop="@+id/new_event_street"
        android:layout_toEndOf="@+id/new_event_street"
        android:hint="@string/new_event_streetNr_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/new_event_zip"
        android:layout_below="@+id/new_event_street_nr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:hint="@string/new_event_zip_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/new_event_city"
        android:layout_below="@+id/new_event_zip"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_event_city_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/new_event_name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/new_event_street"
        android:layout_marginTop="44dp"
        android:hint="@string/new_event_name_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/new_event_desc"
        android:layout_below="@+id/new_event_city"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_event_desc_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_event_button_lbl"
        android:onClick="createNewEvent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/new_event_date"
        android:layout_below="@+id/new_event_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_event_date_hint"/>
</RelativeLayout>
