<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/registerName"
        android:hint="@string/register_name_placeholder"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_alignStart="@+id/registerSurname"
        android:layout_alignEnd="@+id/registerSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/registerSurname"
        android:layout_below="@+id/registerName"
        android:hint="@string/register_surname_placeholder"
        android:layout_alignEnd="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/registerEmail"
        android:layout_below="@+id/registerSurname"
        android:hint="@string/register_email_placeholder"
        android:layout_alignEnd="@+id/registerSurname"
        android:layout_alignStart="@+id/registerSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword"
        android:layout_below="@+id/registerEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_password_placeholder"
        android:fontFamily="sans-serif" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerRepeatPassword"
        android:layout_below="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword"
        android:hint="@string/register_repeatpassword_placeholder"
        android:fontFamily="sans-serif" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_executeregistration"
        android:id="@+id/executeRegistrationBtn"
        android:layout_below="@+id/registerRepeatPassword"
        android:layout_alignStart="@+id/registerRepeatPassword"
        android:layout_marginTop="38dp"
        android:onClick="executeRegistration"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_backbutton"
        android:id="@+id/backToLoginBtn"
        android:layout_below="@+id/executeRegistrationBtn"
        android:layout_alignStart="@+id/executeRegistrationBtn"
        android:layout_marginTop="46dp"
        android:onClick="backToLoginFromRegistration"/>

</RelativeLayout>
