<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hsos.mad.clique.activities.ShowEventDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_detail_streetLbl"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/event_detail_street_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_detail_streetNbrLbl"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/event_detail_street_label"
        android:layout_alignParentStart="true"
        android:id="@+id/event_detail_streetnumber_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_detail_cityLbl"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/event_detail_streetnumber_label"
        android:layout_alignParentStart="true"
        android:id="@+id/event_detail_city_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_detail_descLbl"
        android:layout_below="@+id/event_detail_city_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:id="@+id/event_detail_desc_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/event_detail_street"
        android:layout_below="@+id/event_detail_street_label"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/event_detail_streetNumber"
        android:layout_below="@+id/event_detail_streetnumber_label"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/event_detail_city"
        android:layout_below="@+id/event_detail_city_label"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="..."
        android:id="@+id/event_detail_desc"
        android:layout_below="@+id/event_detail_desc_label"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_button_acceptLbl"
        android:id="@+id/event_detail_button_accept"
        android:layout_below="@+id/event_detail_desc"
        android:layout_marginTop="37dp"
        android:onClick="acceptEvent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_button_cancelLbl"
        android:id="@+id/event_detail_button_cancel"
        android:layout_alignTop="@+id/event_detail_button_showLocation"
        android:layout_centerHorizontal="true"
        android:onClick="cancelEvent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_button_showLocationLbl"
        android:id="@+id/event_detail_button_showLocation"
        android:layout_alignTop="@+id/event_detail_button_accept"
        android:layout_alignParentEnd="true"
        android:onClick="showEventLocation"/>
</RelativeLayout>
