<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hsos.mad.clique.activities.CreateNewClique">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_clique_caption1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_clique_caption_one" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_clique_input_name"
        android:layout_below="@+id/new_clique_caption1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_clique_caption_two"
        android:id="@+id/new_clique_caption2"
        android:layout_below="@+id/new_clique_input_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <EditText
        android:inputType="textLongMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_clique_input_desc"
        android:layout_below="@+id/new_clique_caption2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_clique_button"
        android:id="@+id/button"
        android:layout_below="@+id/new_clique_input_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:onClick="createCliqueAndReturn"/>
</RelativeLayout>
